# bart-rs

./: .gitignore  Cargo.toml  Makefile  README.md  dhat-heap.json  pyproject.toml  ~
.github/workflows/: CI.yml  test.yml
.zed/: settings.json
benches/: all_benchmarks.rs  comprehensive_particle_benchmark.rs  memory_analysis_benchmark.rs  particle_gibbs.rs  particle_mutation_benchmark.rs  performance.rs  planting.rs  resample.rs  smc_algorithm.rs  split_rules.rs  weight_normalization.rs
benchmark/: Makefile
benchmark/environments/: bart_python.yml  bart_rust.yml
benchmark/examples/: bart_biking.py  bart_examples.py  t.py
benchmark/profiling/: bikes-dhat-heap.json  nhefs-dhat-heap.json
benchmark/scripts/: aggregate_results.py  benchmark.sh  python_benchmark.sh
bindings/: Cargo.toml  README.md  pyproject.toml
bindings/py_src/bart_rs/: bart.py  logp.py
bindings/python/bart_rs/: __init__.py  bart.py  compile_pymc.py  logp.py  pgbart.py  utils.py
bindings/python/pymc_bart/: __init__.py  pgbart.py
bindings/src/: data.rs  lib.rs
docs/: option-a-tree-dump-prompt.md
examples/: BART_introduction_Rust.ipynb  bart_examples.py  bench_runner.py  bench_rust_vs_python.py  example.py  numba_cfunc.py  nutpie_test.py  test.py  test_compile_pymc_model.py  test_rust_bart.ipynb  test_rust_bart.py  test_rust_bart_initialize.py  test_rust_bikes.py
pg-bart/: Cargo.toml
pg-bart/src/: data.rs  lib.rs  math.rs  ops.rs  particle.rs  pgbart.rs  probabilities.rs  sampler.rs  split.rs  split_rules.rs  tree.rs
pg-bart/tests/: ops.rs  particle.rs  pgbart.rs  split_rules.rs  tree.rs
python/pymc_bart/: bart.py  compile_pymc.py  pgbart.py  utils.py
python/pymc_bart_rs/: __init__.py  pgbart.py  tree_dump.py
python/tests/: test_bart_models.py  test_compile_pymc.py  test_sampling_regression.py  test_tree.py  test_tree_dumps.py
src/: base.rs  builder.rs  config.rs  data.rs  forest.rs  kernel.rs  lib.rs  main.rs  math.rs  ops.rs  particle.rs  pgbart.rs  resampling.rs  response.rs  sampler.rs  smc.rs  split_rules.rs  splitting.rs  state.rs  tree.rs  update.rs  weight.rs
tests/: integration_test.rs  ops.rs  particle.rs  performance_tests.rs  pgbart.rs  split_rules.rs  tree.rs  unit_tests.rs
