#   Copyright 2025 The PyMC Developers
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

[package]
name = "pymc-bart"
version = "0.1.2"
edition = "2024"

[lib]
name = "pymc_bart"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["macros"] }
numpy = { version = "0.25.0" }
bumpalo = { version = "3.19.0", features = ["boxed", "collections"] }
rand = { version = "0.9.1" }
rand_distr = { version = "0.5.0" }
dhat = "0.3.3"
polars = { version = "0.49.1", features = ["parquet", "ndarray", "lazy"] }
polars-core = { version = "0.49.1", features = ["ndarray"] }
polars-io = "0.49.1"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[features]
extension-module = ["pyo3/extension-module"]
dhat-heap = []

[build-dependencies]
pyo3-build-config = "0.25.1"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = 3
# target-cpu = "native"

[profile.bench]
debug = true
opt-level = 3
lto = true
codegen-units = 1
