[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pymc_bart"
requires-python = ">=3.8, <3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

#dependencies = [
#  "numba >= 0.60.0",
#  "pymc >= 5.19.1",
#  "arviz >= 0.20.0",
#]

[project.optional-dependencies]
all = [
  "numba >= 0.60.0",
  "pymc >= 5.19.1",
  "arviz >= 0.20.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
