#   Copyright 2024 The PyMC Developers
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

[package]
name = "pg-bart"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6" }
numpy = { version = "0.21.0" }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
